[package]
name = "rocket_igniter"
version = "0.0.1"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rocket.rs fairing for a better development experience when using React and WebPack"

[dependencies]
rocket = "0.3"
log = "0.4"

[badges]
travis-ci = { repository = "mstallmo/rocket_igniter"}
