[package]
name = "rocket_igniter"
version = "0.0.3"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"
license = "MIT/Apache 2.0"
description = "A Rocket.rs fairing for a better development experience when using React and WebPack"

[dependencies]
rocket = "0.4"
log = "0.4"

[badges]
travis-ci = { repository = "mstallmo/rocket_igniter"}
